Removing Unneccessary Code

--- a/src/assets/scss/main/_tokyo.scss
+++ b/src/assets/scss/main/_tokyo.scss
@@ -1,23 +1,19 @@
-/*
-/*	Copyright (c) 2021 ib-themes
-/*	Author: ib-themes
-/*	This file is made for CURRENT TEMPLATE
 
-01)	TOKYO BASE
-02) TOKYO LEFTPART
-03) TOKYO RIGHTPART
-04) TOKYO HOME
-05) TOKYO ABOUT
-06) TOKYO PORTFOLIO
-07) TOKYO NEWS
-08) TOKYO CONTACT
-09) TOKYO MAGIC CURSOR
-10) TOKYO MEDIA QUERIES (FOR SMALL DEVIVES)
-11) TOKYO 404
+// 01) BASE
+// 02) LEFTPART
+// 03) RIGHTPART
+// 04) HOME
+// 05) ABOUT
+// 06) PORTFOLIO
+// 07) NEWS
+// 08) CONTACT
+// 09) MAGIC CURSOR
+// 10) MEDIA QUERIES (FOR SMALL DEVIVES)
+// 11) 404
 
 
 /*---------------------------------------------------*/
-/*	01)	TOKYO BASE
+/*	01) BASE
 /*---------------------------------------------------*/
 
 html {
@@ -249,7 +245,7 @@ h6 {
 }
 
 /*---------------------------------------------------*/
-/*	02) TOKYO LEFTPART
+/*	02) LEFTPART
 /*---------------------------------------------------*/
 
 .tokyo_tm_all_wrap .leftpart {
@@ -346,7 +342,7 @@ h6 {
 }
 
 /*---------------------------------------------------*/
-/*	03) TOKYO RIGHTPART
+/*	03) RIGHTPART
 /*---------------------------------------------------*/
 
 .tokyo_tm_all_wrap .rightpart {
@@ -421,7 +417,7 @@ h6 {
 }
 
 /*---------------------------------------------------*/
-/*	04) TOKYO HOME
+/*	04) HOME
 /*---------------------------------------------------*/
 
 .tokyo_tm_home {
@@ -517,7 +513,7 @@ h6 {
 }
 
 /*---------------------------------------------------*/
-/*	05) TOKYO ABOUT
+/*	05) ABOUT
 /*---------------------------------------------------*/
 
 .tokyo_tm_about {
@@ -818,7 +814,7 @@ h6 {
 }
 
 /*---------------------------------------------------*/
-/*	06) TOKYO PORTFOLIO
+/*	06) PORTFOLIO
 /*---------------------------------------------------*/
 
 .tokyo_tm_title {
@@ -1001,7 +997,7 @@ ul.react-tabs__tab-list {
 }
 
 /*---------------------------------------------------*/
-/*	07) TOKYO NEWS 
+/*	07) NEWS 
 /*---------------------------------------------------*/
 
 .tokyo_tm_news {
@@ -1430,7 +1426,7 @@ body.modal {
 }
 
 /*---------------------------------------------------*/
-/*	08) TOKYO CONTACT
+/*	08) CONTACT
 /*---------------------------------------------------*/
 
 .tokyo_tm_contact {
@@ -1515,7 +1511,7 @@ body.modal {
 }
 
 /*---------------------------------------------------*/
-/*	9) TOKYO MAGIC CURSOR
+/*	9) MAGIC CURSOR
 /*---------------------------------------------------*/
 
 .tokyo_tm_all_wrap[data-magic-cursor="hide"] .mouse-cursor {
@@ -1567,7 +1563,7 @@ body.modal {
 }
 
 /*---------------------------------------------------*/
-/*	10) TOKYO MEDIA QUERIES (FOR SMALL DEVIVES)
+/*	10) MEDIA QUERIES (FOR SMALL DEVIVES)
 /*---------------------------------------------------*/
 
 @media (max-width: 1600px) {
@@ -1799,7 +1795,7 @@ body.modal {
 }
 
 /*---------------------------------------------------*/
-/*	11) TOKYO 404 
+/*	11) 404 
 /*---------------------------------------------------*/
 
 .tokyo_tm_section .container {
@@ -2229,3 +2225,9 @@ body.modal {
     cursor: pointer;
   }
 }
+
+/*
+/*	Copyright (c) 2021 ib-themes
+/*	Author: ib-themes
+/*	This file is made for CURRENT TEMPLATE
+*/
